# dj_viale

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.override.yml  compose.yml  db.sqlite3  entrypoint.sh  main.py  manage.py  pyproject.toml
core/: checks.py  docx.py  forms.py  signals.py  urls.py  views.py
core/admin/: __init__.py  adresse.py  document_global.py  email_envoye.py  membre.py  modele_document.py  organe.py  reunion.py  user.py
core/migrations/: 0001_initial.py  0002_tagdocument_reunion_membres_modeledocument.py  0003_procuration_fichier.py  0004_duree_mandat_en_annees.py  0005_document_reunion.py  0006_disponible_par_mail.py  0007_alter_membre_adresse.py  0008_organe_preposition.py  0009_organe_pronom.py  0010_ordre_du_jour.py  0011_email_envoye.py  0012_alter_documentreunion_reunion.py
core/models/: __init__.py  adhesion.py  adresse.py  document_reunion.py  email_envoye.py  membre.py  membre_reunion.py  modele_document.py  organe.py  procuration.py  reunion.py  tag_document.py  user.py
core/templates/admin/core/reunion/: envoyer_email.html
dj_asbl/: asgi.py  router.py  settings.py  urls.py  wsgi.py
