[project]
name = "dj-asbl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.5",
    "django-constance>=4.0",
    "django-environ>=0.13.0",
    "django-unfold>=0.93.0",
    "docxtpl>=0.20.2",
    "gunicorn>=26.0.0",
    "icalendar>=7.1.0",
    "psycopg>=3.3.4",
    "whitenoise>=6.12.0",
]
